--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,14 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<div class="regcontainer">
+<div class="gradient-overlay">
 <head>
   <meta charset="UTF-8">
+<div class="regcontainer">
   <h1>Holy Name Father's Guild</h1>
 </head>
 <body>
-<p>We are a non-profit organization, celebrating 37 years of  providing sports programs for over 500 children in Holy Name parish / Windsor Terrace community located in Brooklyn, New York.</p>
-</body>
+  <p>
+We are a non-profit organization, celebrating 37 years<br>of  providing sports programs for over 500 children in <br> Holy Name parish / Windsor Terrace community <br>located in Brooklyn, New York.
+</p>
 </div>
+</div>
+
+<div class="picture-inline">
+
+<div class="pic-container">
+  <a div class="picture1" href="myfile.htm"><img src="http://www.freeimages.com/pic/l/c/ct/ctr/831128_14392675.jpg"></a>
+  </div>
+</div>
+
+  <div class="pic-container2">
+  <a div class="picture2" href="myfile.htm"><img src="http://www.freeimages.com/pic/l/c/ct/ctr/831126_62781903.jpg"></a>
+  </div>
+</div>
+
+  <div class="pic-container3">
+  <a div class="picture3" href="myfile.htm"><img src="http://www.freeimages.com/pic/l/h/ho/hortongrou/468653_18174779.jpg"></a>
+  </div>
+</div>
+
+
+<div class="pic-container4">
+  <a div class="picture4" href="myfile.htm"><img src="http://www.freeimages.com/pic/l/j/je/je1196/278547_4696.jpg"></a>
+  </div>
+</div>
+
+</div>
+
+
+
+
+<div class="main-content">
+  <p>
+    If not for technology – and the evolution of typewriters to QWERTY keyboards to touch screens –
+    <br><br>
+    I’m not sure this whole “writer” thing would’ve ever panned out. At least, not if I was doing any of that writing by hand.<br><br>
+
+On the off chance you don’t know me personally, or have
+<br><br>never tried cheating off me on a short-response exam, my handwriting is absolutely grim.<br><br>
+
+My C’s could easily be mistaken for O’s, my E’s look like L’s and my Q’s, well, my Q’s don’t really end up
+<br> looking like anything (at least not anything you could remotely trace back to our modern alphabet).<br><br>
+
+And it’s been this way for as long as I can remember – my sloppy handwriting (or, more aptly, “chicken scratch”) <br><br>is far from a new development. It’s not like I graduated from high school and said, “f*ck it,” before
+<br><br> letting my penmanship go out the window. I’ve written like sh*t for as long as I can remember.><br><br>
+  </p>
+  </div>
+
+
+
+</body>
 </html>
 
 
