--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<div class="regcontainer">
 <head>
   <meta charset="UTF-8">
-  <h1>Here's how to Contact us.</h1>
+<div class="main-content">
+  <h1>Prospect Park</h1>
 </head>
 <body>
-  <p>You can reach Father's Guild President Tom Larkin at tmlcsc@aol.com</p>
+  <p><strong>Directions:</strong> Go in the 9th Street entrance to Prospect Park on Prospect Park West. <br> Walk straight east across the inner roadway, down onto the fields.<br>  Field 4 is straight ahead—see the second map below which indicates the locations of all the fields by division.  <br>You can also enter the Park on Prospect Park SW between 10th & 11th Avenue.</p>
 
-</body>
+  <p><strong>Public Transportation:</strong> F train – 7th Ave & 9th Street Station (7th Avenue stop) or 15th Street Station (15th Street stop)
+
+
 </div>
+</body>
 </html>
