--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,29 +13,25 @@ We are a non-profit organization, celebrating 37 years<br>of  providing sports p
 </div>
 </div>
 
-<div class="picture-inline">
-
 <div class="pic-container">
-  <a div class="picture1" href="myfile.htm"><img src="http://www.freeimages.com/pic/l/c/ct/ctr/831128_14392675.jpg"></a>
+  <a div class="picture1" href="myfile.htm"><img src="http://i38.photobucket.com/albums/e112/Tino221/soccer.jpg"></a>
   </div>
 </div>
 
   <div class="pic-container2">
-  <a div class="picture2" href="myfile.htm"><img src="http://www.freeimages.com/pic/l/c/ct/ctr/831126_62781903.jpg"></a>
+  <a div class="picture2" href="myfile.htm"><img src="http://i38.photobucket.com/albums/e112/Tino221/soccer2-1.jpg"></a>
   </div>
 </div>
 
   <div class="pic-container3">
-  <a div class="picture3" href="myfile.htm"><img src="http://www.freeimages.com/pic/l/h/ho/hortongrou/468653_18174779.jpg"></a>
+  <a div class="picture3" href="myfile.htm"><img src="http://i38.photobucket.com/albums/e112/Tino221/flag_football.jpg"></a>
   </div>
 </div>
 
 
 <div class="pic-container4">
-  <a div class="picture4" href="myfile.htm"><img src="http://www.freeimages.com/pic/l/j/je/je1196/278547_4696.jpg"></a>
+  <a div class="picture4" href="myfile.htm"><img src="http://i38.photobucket.com/albums/e112/Tino221/flag_football2-1.jpg"></a>
   </div>
-</div>
-
 </div>
 
 
@@ -43,19 +39,27 @@ We are a non-profit organization, celebrating 37 years<br>of  providing sports p
 
 <div class="main-content">
   <p>
-    If not for technology – and the evolution of typewriters to QWERTY keyboards to touch screens –
+    We continue to believe, that through our commitment, we help you in your endeavor to have a positive impact on your children’s lives through sports.<br><br>
+    These activies are not sponsored or endorsed by the NYC Dept of Education or the city of New York.
     <br><br>
-    I’m not sure this whole “writer” thing would’ve ever panned out. At least, not if I was doing any of that writing by hand.<br><br>
 
-On the off chance you don’t know me personally, or have
-<br><br>never tried cheating off me on a short-response exam, my handwriting is absolutely grim.<br><br>
-
-My C’s could easily be mistaken for O’s, my E’s look like L’s and my Q’s, well, my Q’s don’t really end up
-<br> looking like anything (at least not anything you could remotely trace back to our modern alphabet).<br><br>
-
-And it’s been this way for as long as I can remember – my sloppy handwriting (or, more aptly, “chicken scratch”) <br><br>is far from a new development. It’s not like I graduated from high school and said, “f*ck it,” before
-<br><br> letting my penmanship go out the window. I’ve written like sh*t for as long as I can remember.><br><br>
+    Please be careful when ordering uniforms. They are custom made and we don't keep them in stock.<br> So if you make a mistake you may be charged for a new uniform. <br><br>It is better to go larger then smaller, larger uniforms can be tuck in or have a sweat shirt under them.
+<br><br>
+Shepherd's Hall/Rectory basement are located in the school yard, behind the church at 245 Prospect Park West.
+<br><br>
   </p>
+  </div>
+
+  <div class="bluebox">
+    <div class="regcontainer2">
+  <h1>Contact Us</h1>
+</head>
+<body>
+  <p>
+President Tom Larkin<br><bold>Holynamefathersguild@gmail.com<br>718-851-1722</bold>
+</p>
+</div>
+
   </div>
 
 
