--- a/app/views/welcome/park.html.erb
+++ b/app/views/welcome/park.html.erb
@@ -1,12 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-<div class="regcontainer">
 <head>
   <meta charset="UTF-8">
-    <h1>Prospect Park Baseball</h1>
+<div class="main-content">
 </head>
 <body>
+<div class="gradient-overlay">
+<div class="regcontainer">
 
-</body>
+<h2>What is T-Ball?</h2>
+<p>
+T-Ball is an entry-level league to introduce young players to baseball. <br> Players will develop their skills while focusing on the basic fundamentals of throwing, fielding and hitting. <br> Teams sizes are small at about 8-12 players per team. <br>Players all hit from an adjustable batting tee. <br>RIF (reduced injury factor) baseballs are used.
+
+</p>
+<br><br>
+
+<h2>What is Prospect Park Baseball?</h2>
+<p>The Prospect Park Baseball Association (PPBA) administers a youth co-ed baseball and softball league for ages 5-17 in Prospect Park, Brooklyn.<br> With over 2500 players, it is one of the biggest youth leagues in the United States.<br><br>
+
+The season runs from the beginning of April to mid-June, and most registration occurs December-February.  The league is made up of eight local organizations.<br>To sign up, click the sign up tab in the top left of the screen.
+<br><br>
 </div>
+</div>
+  <h2>Fees</h2>
+
+  <p>
+<br>
+T-Ball League (OLF) - ages 5,6 and 7: <strong>$85</strong>
+<br>
+Pony League    - ages 7 and 8: <strong>$160</strong>
+<br>
+
+Cub League - ages 8 and 10: <strong>$160</strong>
+<br>
+
+Bantam League - ages 11 and 12: <strong>$160</strong>
+<br>
+
+Super Bantam - age 13: <strong>$160</strong>
+<br>
+
+Grasshopper League - ages 13 and 15: <strong>$160</strong>
+<br>
+
+Freshman League - ages 15-17: <strong>$160</strong>
+<br>
+
+Girls Mustang league - ages 8-10: <strong>$160</strong>
+<br>
+
+Girls Bronco league - ages 11,12: <strong>$160</strong>
+<br>
+
+Girls Colt league - age 15: <strong>$160</strong>
+<br>
+
+Freshwomen League - ages 15-17:  <strong>$160</strong>
+<br><br>
+Baseball Fees are as follows: ($10 late fee after Feb. 16th)<br><br>
+
+</p>
+<br><br>
+
+  <h2>Rainout Information</h2>
+
+  <p>To find out if the game is being played. <br>Please call the weather hotline<br>
+
+<strong>(888) 473-6864</strong>
+<br><br>
+Please listen to the entire message. <br>Sometimes games are cancelled in prospect park but are still being played at other fields, or vice versa.
+<br>
+Sometimes games in the morning (9am and 11am) slots are cancelled in Prospect Park but are still being played at other fields.
+
+<br></p>
+<br><br><br>
+<div class="bluebox2">
+  <div class="regcontainer2">
+<h2>Facilities</h2>
+
+<br>
+  <h3>Prospect Park</h3>
+
+  <p><strong>Directions:</strong> Go in the 9th Street entrance to Prospect Park on Prospect Park West. <br> Walk straight east across the inner roadway, down onto the fields.<br>  Field 4 is straight ahead—see the second map below which indicates the locations of all the fields by division.  <br>You can also enter the Park on Prospect Park SW between 10th & 11th Avenue.</p>
+
+  <p><strong>Public Transportation:</strong> F train – 7th Ave & 9th Street Station (7th Avenue stop) or 15th Street Station (15th Street stop)
+
+
+<br><br>
+    <h3>Sunset Park</h3>
+</head>
+<body>
+  <p><strong>Directions:</strong> On the east side of 3rd Avenue between 40th and 41st street.
+
+  <p><strong>Public Transportation: </strong>N or R trains – 45th Street & 4th Avenue.
+
+<br><br>
+
+
+    <h3>Parade Grounds</h3>
+</head>
+<body>
+  <p><strong>Directions: </strong>On the corner of Parkside Avenue and Parade Place. <br> Field 6 is the corner field; Field 5 is inside the Park and is entered from Parade Place.
+
+  <p><strong>Public Transportation: </strong>Q Train to Parkside at Ocean Avenue (walk West along Parkside) <br> Q Train to Church at East 18th (Exit on Caton Avenue, walk East on Caton Avenue, then North on Parade Place).
+</div>
+</div>
+</div>
+</body>
 </html>
