--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,42 +38,17 @@
 
 
 
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Baseball <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="/welcome/tee">Tee Ball</a></li>
-            <li><a href="/welcome/park">Prospect Park Baseball</a></li>
-          </ul>
-        </li>
-      </ul>
-
-
-
-
-
-        <ul class="nav navbar-nav">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Basketball <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="/welcome/clinic">Basketbal Clinic</a></li>
-            <li><a href="/welcome/basketball">Travel Basketball</a></li>
-          </ul>
-        </li>
-      </ul>
 
       <ul class="nav navbar-nav">
-      <li><a href="/welcome/swimming">Swimming</a></li>
+        <li><a href="/welcome/park">Baseball</a></li>
+        <li><a href="/welcome/basketball">Basketball</a></li>
+        <li><a href="/welcome/swimming">Swimming</a></li>
       <li><a href="/welcome/football">Flag Football</a></li>
       <li><a href="/welcome/soccer">Soccer</a></li>
       </ul>
 
 
 
-
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="/welcome/about">About Us</a></li>
-        <li><a href="/welcome/contact">Contact Us</a></li>
-      </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
